requestモジュールをnode-fetchに置き換え、エラーハンドリングを改善

--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "spotify-controller",
   "version": "1.0.0",
-  "description": "Spotify playback position controller",
+  "description": "Spotify playback controller",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "npm install"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.9"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
